création de la « TP4 »

--- a/index.html
+++ b/index.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belles Beach House</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <header class="top">
+        <h1>Belles Beach House</h1>
+        <nav>
+            <a href="#">Our Story</a>
+            <a href="#">Fare</a>
+            <a href="#">Drink</a>
+            <a href="#">Contact</a>
+        </nav>
+        <div class="image">
+            <img src="assets/img/licorne.png" alt="licorne">
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <div class="col-s">
+                    <h2>Our Story</h2>
+                    <p>We started out with a quest for fresh game prepared in a delicate and natural way. It all began when our founder Emma Wilson came up with the idea that a great place to eat shouldn't be hard to find or hard to enjoy. Our deli fish is freshly caught under special laws and we work directly with animal protection and local farmers. We hope you enjoy the food from our kitchen to your plate.
+                        est.2004</p>
+                </div>
+                <div class="col-s">
+                    <img class="image_asperge" src="assets/img/asperge.jpg" alt="asperge">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="col-i">
+                    <img class="image1" src="assets/img/soap.jpg" alt="soap">
+                </div>
+                <div class="col-i">
+                    <h3>Fresh Fare</h3>
+                    <p class="row">We started out with a quest for fresh game prepared in a delicate and natural way. It all began when our founder Emma Wilson came up with the idea that a great place to eat shouldn't be hard to find or hard to enjoy. Our deli fish is freshly caught under special laws and we work directly with animal protection and local farmers. We hope you enjoy the food from our kitchen to your plate.</p>
+                    <p class="all_natural , row">All natural</p>
+                </div>
+                <div class="col-i">
+                    <img class="image2" src="assets/img/graines_01.jpg" alt="graine">
+                </div>
+            </div>  
+        </section>
+        <section>
+            <h4 class="col-l">Local Distillation</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, error nobis, consequuntur architecto sed, veritatis molestiae deleniti vel voluptatum delectus minus quisquam placeat libero illo ex illum. Quas, delectus blanditiis!</p>
+            <p class="Craft_liquor">Craft liquor</p>              
+            <div class="col-m">
+                <img src="assets/img/moule.jpg" alt="moule" class="moule" />
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="col-s">
+            <h5>Belles Beach House</h5>
+            <p>24 Windward Ave,Venice,<br> CA 90291 <br> Tel:  (424) 722-8476</p>
+        </div>
+        <div class="col-s">
+            <img class="icone" src="assets/img/facebook.png" alt="facebook">
+            <img class="icone" src="assets/img/twitter.png" alt="twitter">
+            <img class="icone" src="assets/img/instagram.png" alt="instagram">
+            <img class="icone" src="assets/img/google-plus.png" alt="google-plus">
+        </div>
+    </footer>  
 </body>
 </html>
+
