--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="top">
-        <h1>Belles Beach House</h1>
+        <h1>Belles Beach House for testing</h1>
         <nav>
             <a href="#">Our Story</a>
             <a href="#">Fare</a>
